src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
struct all_addr {
    union {
        struct in_addr addr4;
#ifdef HAVE_IPV6
        struct in6_addr addr6;
#endif
        /* for log_query */
        struct {
            uint16_t keytag, algo, digest;
        } log;
        /* for log_query */
        struct {
            uint32_t rcode;
        } rcode;
        /* for cache_insert of DNSKEY, DS */
        struct {
            uint16_t _class, type;
        } dnssec;
    } addr;
};
struct cname {
    int ttl, flag;
    char* alias, * target;
    struct cname* next, * targetp;
};
struct host_record {
    int ttl;
    struct name_list {
        char* name;
        struct name_list* next;
    } * names;
    struct in_addr addr;
#ifdef HAVE_IPV6
    struct in6_addr addr6;
#endif
    struct host_record* next;
};
struct interface_name {
    char* name; /* domain name */
    char* intr; /* interface name */
    int family; /* AF_INET, AF_INET6 or zero for both */
    struct addrlist* addr;
    struct interface_name* next;
};
union bigname {
    char name[MAXDNAME];
    union bigname* next; /* freelist */
};
struct blockdata {
    struct blockdata* next;
    unsigned char key[KEYBLOCK_LEN];
};
struct crec {
    struct crec* hash_next;
    struct crec* prev;
    struct crec* next;
    /* union is 16 bytes when doing IPv6, 8 bytes on 32 bit machines without IPv6 */
    union {
        struct all_addr addr;
        struct {
            union {
                struct crec* cache;
                struct interface_name* int_name;
            } target;
            uint32_t uid; /* 0 if union is interface-name */
        } cname;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, flags, keytag;
            unsigned char algo;
        } key;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, keytag;
            unsigned char algo;
            unsigned char digest;
        } ds;
    } addr;
    time_t ttd; /* time to die */
    /* used as class if DNSKEY/DS, index to source for F_HOSTS */
    uint32_t uid;
    uint16_t flags;
    union {
        char sname[SMALLDNAME];
        union bigname* bname;
        char* namep;
    } name;
};
struct dhcp_lease {
    int clid_len;          /* length of client identifier */
    unsigned char* clid;   /* clientid */
    char* hostname, * fqdn; /* name from client-hostname option or config */
    char* old_hostname;    /* hostname before it moved to another lease */
    int flags;
    time_t expires;        /* lease expiry */
#ifdef HAVE_BROKEN_RTC
    uint32_t length;
#endif
    int hwaddr_len, hwaddr_type;
    unsigned char hwaddr[DHCP_CHADDR_MAX];
    struct in_addr addr, override, giaddr;
    unsigned char* extradata;
    uint32_t extradata_len, extradata_size;
    int last_interface;
    int new_interface;     /* save possible originated interface */
    int new_prefixlen;     /* and its prefix length */
#ifdef HAVE_DHCP6
    struct in6_addr addr6;
    int iaid;
    struct slaac_address {
      struct in6_addr addr;
      time_t ping_time;
      int backoff; /* zero -> confirmed */
      struct slaac_address *next;
    } *slaac_address;
    int vendorclass_count;
#endif
    struct dhcp_lease* next;
};
struct dhcp_netid {
    char* net;
    struct dhcp_netid* next;
};
struct dhcp_netid_list {
    struct dhcp_netid* list;
    struct dhcp_netid_list* next;
};
struct hwaddr_config {
    int hwaddr_len, hwaddr_type;
    unsigned char hwaddr[DHCP_CHADDR_MAX];
    uint32_t wildcard_mask;
    struct hwaddr_config* next;
};
struct dhcp_config {
    uint32_t flags;
    int clid_len;          /* length of client identifier */
    unsigned char* clid;   /* clientid */
    char* hostname, * domain;
    struct dhcp_netid_list* netid;
#ifdef HAVE_DHCP6
    struct in6_addr addr6;
#endif
    struct in_addr addr;
    time_t decline_time;
    uint32_t lease_time;
    struct hwaddr_config* hwaddr;
    struct dhcp_config* next;
};
struct dhcp_opt {
    int opt, len, flags;
    union {
        int encap;
        uint32_t wildcard_mask;
        unsigned char* vendor_class;
    } u;
    unsigned char* val;
    struct dhcp_netid* netid;
    struct dhcp_opt* next;
};
struct dhcp_context {
    uint32_t lease_time, addr_epoch;
    struct in_addr netmask, broadcast;
    struct in_addr local, router;
    struct in_addr start, end; /* range of available addresses */
#ifdef HAVE_DHCP6
    struct in6_addr start6, end6; /* range of available addresses */
    struct in6_addr local6;
    int prefix, if_index;
    uint32_t valid, preferred, saved_valid;
    time_t ra_time, ra_short_period_start, address_lost_time;
    char *template_interface;
#endif
    int flags;
    struct dhcp_netid netid, * filter;
    struct dhcp_context* next, * current;
};
void cache_add_dhcp_entry(char* host_name, int prot, struct all_addr* host_address, time_t ttd);
void cache_unhash_dhcp(void);
int read_hostsfile(char* filename, uint32_t index, int cache_size,
        struct crec** rhash, int hashsz);
/* domain.c */
char* get_domain(struct in_addr addr);
char *get_domain6(struct in6_addr *addr);
void* safe_malloc(size_t size);
void* whine_malloc(size_t size);
int netmask_length(struct in_addr mask);
uint64_t addr6part(struct in6_addr *addr);
int retry_send(ssize_t rc);
int parse_hex(char* in, unsigned char* out, int maxlen,
        uint32_t* wildcard_mask, int* mac_type);
/* log.c */
void die(char* message, char* arg1, int exit_code) ATTRIBUTE_NORETURN;
int option_read_dynfile(char* file, int flags);
char* host_from_dns(struct in_addr addr);
void lease_update_file(time_t now);
void lease_update_dns(int force);
void lease_update_from_configs(void);
void send_alarm(time_t event, time_t now);
/* bpf.c or netlink.c */
int iface_enumerate(int family, void* parm, int (callback)());
void queue_script(int action, struct dhcp_lease* lease,
        char* hostname, time_t now);
void make_duid(time_t now);
void dhcp_update_configs(struct dhcp_config* configs);
struct dhcp_config* find_config(struct dhcp_config* configs,
        struct dhcp_context* context,
        unsigned char* clid, int clid_len,
        unsigned char* hwaddr, int hw_len,
        int hw_type, char* hostname);
time_t periodic_ra(time_t now);
void slaac_add_addrs(struct dhcp_lease *lease, time_t now, int force);
time_t periodic_slaac(time_t now, struct dhcp_lease *leases);
void slaac_ping_reply(struct in6_addr *sender, unsigned char *packet, char *interface, struct dhcp_lease *leases);