src/slack.rs

#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_159 {
    pub target: C2RustUnnamed_16,
    pub uid: u32,
    pub is_name_ptr: i32,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_16 {
    pub cache: &mut crec,
    pub name: &mut String,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct crec3 {
    pub next: &mut crec,
    pub prev: &mut crec,
    pub hash_next: &mut crec,
    pub addr: all_addr,
    pub ttd: time::Instant,
    pub uid: u32,
    pub flags: u32,
    pub name: C2RustUnnamed_17,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_17 {
    pub sname: [libc::c_char; 50],
    pub bname: &mut bigname,
    pub namep: &mut String,
}












#[derive(Copy, Clone)]
#[repr(C)]
pub struct name_list {
    pub name: &mut String,
    pub next: &mut name_list,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_opt3 {
    pub opt: i32,
    pub len: i32,
    pub flags: i32,
    pub u: C2RustUnnamed_18,
    pub val: mut Vec<u8>,
    pub netid: &mut dhcp_netid,
    pub next: &mut dhcp_opt,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_18 {
    pub encap: i32,
    pub wildcard_mask: u32,
    pub vendor_class: mut Vec<u8>,
}


















#[derive(Copy, Clone)]
#[repr(C)]
pub struct script_data {
    pub flags: i32,
    pub action: i32,
    pub hwaddr_len: i32,
    pub hwaddr_type: i32,
    pub clid_len: i32,
    pub hostname_len: i32,
    pub ed_len: i32,
    pub addr: in_addr,
    pub giaddr: in_addr,
    pub remaining_time: u32,
    pub expires: time::Instant,
    pub file_len: off_t,
    pub addr6: in6_addr,
    pub vendorclass_count: i32,
    pub iaid: u32,
    pub hwaddr: [libc::c_uchar; 16],
    pub interface: [libc::c_char; 16],
}

#[inline]
unsafe extern "C" fn atoi(mut __nptr: *const libc::c_char) -> i32 {
    return strtol(__nptr, 0 ,
                  10);
}




extern "C" {

    pub type __dirstream;












    #[no_mangle]
    fn strrchr(_: *const libc::c_char, _: i32) -> &mut String;

    #[no_mangle]
    fn strerror(_: i32) -> &mut String;
    #[no_mangle]
    fn read(__fd: i32, __buf:Vec<u8>, __nbytes: usize)
            -> ssize_t;
    #[no_mangle]
    fn readlink(__path: *const libc::c_char, __buf: &mut String,
                __len: usize) -> ssize_t;





    #[no_mangle]
    fn dhcp_update_configs(configs:  &mut dhcp_config) ;
    #[no_mangle]
    fn lease_update_from_configs();


    #[no_mangle]
    fn __errno_location() -> ;




    #[no_mangle]
    fn opendir(__name: *const libc::c_char) -> DIR;
    #[no_mangle]
    fn closedir(__dirp:  &mut DIR)  -> i32;
    #[no_mangle]
    fn readdir(__dirp:  &mut DIR)  -> dirent;

    #[no_mangle]
    fn read_hostsfile(filename: &mut String, index: u32,
                      cache_size: i32, rhash: &mut crec,
                      hashsz: i32) -> i32;
    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn option_read_dynfile(file: &mut String, flags: i32)
                           -> i32;
    #[no_mangle]
    fn lease_update_file(now: time::Instant);
    #[no_mangle]
    fn lease_update_dns(force: i32);
    #[no_mangle]
    fn free(__ptr:Vec<u8>);
    #[no_mangle]
    fn inotify_init1(__flags: i32) -> i32;
    #[no_mangle]
    fn inotify_add_watch(__fd: i32, __name: *const libc::c_char,
                         __mask: uint32_t) -> i32;
}

















#[derive(Copy, Clone)]
#[repr(C)]
pub struct dirent {
    pub d_ino: __ino64_t,
    pub d_off: __off64_t,
    pub d_reclen: u16,
    pub d_type: libc::c_uchar,
    pub d_name: [libc::c_char; 256],
}
pub type DIR = __dirstream;





















#[derive(Copy, Clone)]
#[repr(C)]
pub struct host_record {
    pub ttl: i32,
    pub flags: i32,
    pub names: &mut name_list,
    pub addr: in_addr,
    pub addr6: in6_addr,
    pub next: &mut host_record,
}









































pub const IN_CLOEXEC: C2RustUnnamed_8 = 524288;
pub const IN_NONBLOCK: C2RustUnnamed_8 = 2048;
#[derive(Copy, Clone)]
#[repr(C)]
pub struct inotify_event {
    pub wd: i32,
    pub mask: uint32_t,
    pub cookie: uint32_t,
    pub len: uint32_t,
    pub name: [libc::c_char; 0],
}
pub type C2RustUnnamed_89 = libc::c_uint;




#[inline]
unsafe extern "C" fn atol(mut __nptr: *const libc::c_char) -> i32 {
    return strtol(__nptr, 0 ,
                  10);
}



extern "C" {








    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn bind(__fd: i32, __addr: __CONST_NetAddress_ARG, __len: socklen_t)
            -> i32;
    #[no_mangle]
    fn sendto(__fd: i32, __buf: *const libc::c_void, __n: usize,
              __flags: i32, __addr: __CONST_NetAddress_ARG,
              __addr_len: socklen_t) -> ssize_t;
    #[no_mangle]
    fn getsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval:Vec<u8>,
                  __optlen:  &mut socklen_t)  -> i32;
    #[no_mangle]
    fn setsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval: *const libc::c_void,
                  __optlen: socklen_t) -> i32;



    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;


    #[no_mangle]
    fn strerror(_: i32) -> &mut String;







    #[no_mangle]
    fn __errno_location() -> ;





    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn retry_send(rc: ssize_t) -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

}



























pub type __u16 = u16;
pub type __u32 = libc::c_uint;
pub type __be16 = __u16;





#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_39 {
    pub keydata: &mut blockdata,
    pub keylen: u16,
    pub keytag: u16,
    pub algo: libc::c_uchar,
    pub digest: libc::c_uchar,
}




#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_79 {
    pub sname: [libc::c_char; 50],
    pub bname: &mut bigname,
    pub namep: &mut String,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct auth_name_list {
    pub name: &mut String,
    pub flags: i32,
    pub next: &mut auth_name_list,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_opt4 {
    pub opt: i32,
    pub len: i32,
    pub flags: i32,
    pub u: C2RustUnnamed_8,
    pub val: mut Vec<u8>,
    pub netid: &mut dhcp_netid,
    pub next: &mut dhcp_opt,
}



















#[derive(Copy, Clone)]
#[repr(C)]
pub struct NetAddress_nl {
    pub nl_family: __kernel_sa_family_t,
    pub nl_pad: u16,
    pub nl_pid: __u32,
    pub nl_groups: __u32,
}

#[derive(Copy, Clone)]
#[repr(C)]
pub struct nlmsghdr {
    pub nlmsg_len: __u32,
    pub nlmsg_type: __u16,
    pub nlmsg_flags: __u16,
    pub nlmsg_seq: __u32,
    pub nlmsg_pid: __u32,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct my_nlattr {
    pub nla_len: __u16,
    pub nla_type: __u16,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct my_nfgenmsg {
    pub nfgen_family: __u8,
    pub version: __u8,
    pub res_id: __be16,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct ip_set_req_adt {
    pub op: u32,
    pub index: uint16_t,
    pub ip: uint32_t,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_99 {
    pub name: [libc::c_char; 32],
    pub index: uint16_t,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct ip_set_req_adt_get {
    pub op: u32,
    pub version: u32,
    pub set: C2RustUnnamed_9,
    pub typename: [libc::c_char; 32],
}







#[inline]









#[inline]
unsafe extern "C" fn atoll(mut __nptr: *const libc::c_char)
                           -> libc::c_longlong {
    return strtoll(__nptr, 0 ,
                   10);
}










extern "C" {

    #[no_mangle]
    fn inet_pton(__af: i32, __cp: *const libc::c_char,
                 __buf:Vec<u8>) -> i32;




    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;




    #[no_mangle]
    fn strerror(_: i32) -> &mut String;
    #[no_mangle]
    fn fsync(__fd: i32) -> i32;
    #[no_mangle]
    fn ftruncate(__fd: i32, __length: __off64_t) -> i32;


    #[no_mangle]
    fn fflush(__stream:  &mut FILE)  -> i32;
    #[no_mangle]
    fn fopen(_: *const libc::c_char, _: *const libc::c_char) -> FILE;


    #[no_mangle]
    fn fscanf(_: &mut FILE, _: *const libc::c_char, _: ...) -> i32;





    #[no_mangle]
    fn rewind(__stream:  &mut FILE) ;
    #[no_mangle]
    fn ferror(__stream:  &mut FILE)  -> i32;
    #[no_mangle]
    fn fileno(__stream:  &mut FILE)  -> i32;
    #[no_mangle]
    fn popen(__command: *const libc::c_char, __modes: *const libc::c_char)
             -> FILE;



    #[no_mangle]
    fn strtoul(_: *const libc::c_char, _: String,
               _: i32) -> libc::c_ulong;
    #[no_mangle]
    fn free(__ptr:Vec<u8>);


    #[no_mangle]
    fn difftime(__time1: time::Instant, __time0: time::Instant) -> libc::c_double;
    #[no_mangle]
    fn __errno_location() -> ;





    #[no_mangle]
    fn cache_add_dhcp_entry(host_name: &mut String, prot: i32,
                            host_address: &mut all_addr, ttd: time::Instant);
    #[no_mangle]
    fn cache_unhash_dhcp();
    #[no_mangle]
    fn pclose(__stream:  &mut FILE)  -> i32;
    #[no_mangle]
    fn get_domain(addr: in_addr) -> &mut String;
    #[no_mangle]
    fn get_domain6(addr:  &mut in6_addr)  -> &mut String;
    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;

    #[no_mangle]
    fn netmask_length(mask: in_addr) -> i32;


    #[no_mangle]
    fn addr6part(addr:  &mut in6_addr)  -> u64_0;
    #[no_mangle]
    fn parse_hex(in_0: &mut String, out: mut Vec<u8>,
                 maxlen: i32, wildcard_mask: &mut libc::c_uint,
                 mac_type: ) -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn host_from_dns(addr: in_addr) -> &mut String;
    #[no_mangle]
    fn send_alarm(event: time::Instant, now: time::Instant);
    #[no_mangle]
    fn periodic_ra(now: time::Instant) -> time::Instant;
    #[no_mangle]
    fn periodic_slaac(now: time::Instant, leases_0:  &mut dhcp_lease)  -> time::Instant;
    #[no_mangle]
    fn slaac_add_addrs(lease: &mut dhcp_lease, now: time::Instant,
                       force: i32);
    #[no_mangle]
    fn slaac_ping_reply(sender: &mut in6_addr, packet: mut Vec<u8>,
                        interface: &mut String,
                        leases_0:  &mut dhcp_lease) ;
    #[no_mangle]
    fn make_duid(now: time::Instant);
    #[no_mangle]
    fn find_config(configs: &mut dhcp_config, context: &mut dhcp_context,
                   clid: mut Vec<u8>, clid_len: i32,
                   hwaddr: mut Vec<u8>, hw_len: i32,
                   hw_type: i32, hostname: &mut String,
                   filter:  &mut dhcp_netid)  -> dhcp_config;
    #[no_mangle]
    fn queue_script(action: i32, lease: &mut dhcp_lease,
                    hostname: &mut String, now: time::Instant);
    #[no_mangle]
    fn iface_enumerate(family: i32, parm:Vec<u8>,
                       callback:
                       Option<unsafe extern "C" fn() -> i32>)
                       -> i32;
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub union all_addr9 {
    pub addr4: in_addr,
    pub addr6: in6_addr,
    pub cname: C2RustUnnamed_5,
    pub key: C2RustUnnamed_4,
    pub ds: C2RustUnnamed_3,
    pub srv: C2RustUnnamed_2,
    pub log: C2RustUnnamed_1,
}
